--- a/editor.html
+++ b/editor.html
@@ -44,6 +44,7 @@
         <div class="tool-group">
             <button id="btn-rotate-page" title="Rotate Page (90°)"><i class="fas fa-sync-alt"></i></button>
             <button id="btn-rotate-all" title="Rotate All"><i class="fas fa-sync"></i></button>
+            <button id="btn-insert-page" title="Insert Blank Page"><i class="fas fa-plus-square"></i></button>
         </div>
 
         <div class="tool-divider"></div>
@@ -58,6 +59,15 @@
         <div class="tool-group options-panel">
             <input type="color" id="color-picker" value="#000000" title="Color">
             <input type="number" id="brush-size" min="1" max="50" value="2" title="Brush Size" style="width: 50px;">
+            <select id="font-family" title="Font Family"
+                style="height: 30px; border-radius: 4px; border: 1px solid #ccc;">
+                <option value="Arial">Arial</option>
+                <option value="Times New Roman">Times New Roman</option>
+                <option value="Courier New">Courier New</option>
+                <option value="Georgia">Georgia</option>
+                <option value="Verdana">Verdana</option>
+                <option value="Impact">Impact</option>
+            </select>
         </div>
 
         <div class="tool-divider"></div>
